tests/copyright/merge/expected_out.txt
=== PLAIN MODE ===
In test_7.m, line 1
| % (c) Copyright 2007-2003 Kitten GmbH
|                 ^^^^ error: initial year is later than end year
In test_8.m, line 1
| % TEST_8 This is a test
| ^^^^^^^^^^^^^^^^^^^^^^^ error: cannot merge entries in this docstring as they are not all next to each other
MISS_HIT Copyright Summary: 10 file(s) analysed, 2 error(s)
